# etl-pipeline-austin-crime

./: .env  .gitignore  1_See_The_Pipeline.py  Dockerfile  README.md  compose.yaml  create_dfs_from_postgresql.py  etl-pipeline-streamlit.py  etl-pipeline-streamlit_v1.py  etl-workflow  etl-workflow.py  etl_workflow-deployment.yaml  extract_json_to_postgres.py  load_dfs_to_postgres.py  log.txt  out  pyproject.toml  read_data_from_postgres.py  requirements.txt  transform_create_dfs.py  write_csv_from_big_query_to_postgres.py  write_dfs_to_postgres.py
.streamlit/: config.toml  secrets.toml
app/: etl-workflow.py  secrets.toml
data/: austin_crime.json
pages/: 2_See_The_Data.py  3_See_The_Dashboard.py
