[tool.poetry]
name = "etl-pipeline-austin-crime"
version = "0.1.0"
description = ""
authors = ["Sofia Matias <114782592+sofiammatias@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.*"
psycopg2 = "^2.*"
prefect = "^2.*"
traceback2 = "^1.*"
numpy = "^1.*"
google = "^3.*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
